--- a/BeatSaberTools/Shared/MainLayout.razor
+++ b/BeatSaberTools/Shared/MainLayout.razor
@@ -10,3 +10,13 @@
         @Body
     </MudMainContent>
 </MudLayout>
+
+@code {
+    [Inject]
+    protected BeatSaberDataService BeatSaberDataService { get; set; }
+
+    protected override void OnInitialized()
+    {
+        BeatSaberDataService.LoadAllMapInfo();
+    }
+}
