--- a/BeatSaberTools/Shared/MainLayout.razor
+++ b/BeatSaberTools/Shared/MainLayout.razor
@@ -17,6 +17,6 @@
 
     protected override void OnInitialized()
     {
-        BeatSaberDataService.LoadAllMapInfo();
+        InvokeAsync(BeatSaberDataService.LoadAllMapInfo);
     }
 }
