--- a/BeatSaberTools/Pages/MapBrowser.razor
+++ b/BeatSaberTools/Pages/MapBrowser.razor
@@ -8,10 +8,18 @@
           FixedHeader="true"
           RowStyle="height: 88px">
     <ToolBarContent>
-        <MudSpacer />
-        <MudTextField @bind-Value="SearchString" Immediate="true" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+        <MudTextField @bind-Value="SearchString"
+                      Immediate="true"
+                      Placeholder="Search"
+                      Variant="Variant.Outlined"
+                      Adornment="Adornment.Start"
+                      AdornmentIcon="@Icons.Material.Filled.Search"
+                      IconSize="Size.Small"
+                      Class="mt-0">
+        </MudTextField>
     </ToolBarContent>
     <HeaderContent>
+        <MudTh></MudTh>
         <MudTh></MudTh>
         <MudTh>
             <MudTableSortLabel SortBy="new Func<Map, object>(x => x.Name)">Name</MudTableSortLabel>
