--- a/BeatSaberTools/Shared/SideNav.razor
+++ b/BeatSaberTools/Shared/SideNav.razor
@@ -1,3 +1,4 @@
 ﻿<MudDrawer Open="true" Elevation="1">
-    <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Filled.LibraryMusic">Maps</MudNavLink>
+    <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Filled.LibraryMusic" DisableRipple="true">Maps</MudNavLink>
+    <PlaylistList></PlaylistList>
 </MudDrawer>
