--- a/BeatSaberTools/Shared/MainLayout.razor
+++ b/BeatSaberTools/Shared/MainLayout.razor
@@ -18,5 +18,6 @@
     protected override void OnInitialized()
     {
         InvokeAsync(BeatSaberDataService.LoadAllMapInfo);
+        InvokeAsync(BeatSaberDataService.LoadAllPlaylists);
     }
 }
