--- a/BeatSaberTools/Shared/PlaylistList.razor
+++ b/BeatSaberTools/Shared/PlaylistList.razor
@@ -1,6 +1,6 @@
 ﻿@using BeatSaberTools.Models.Data.Playlists
 
-<MudList Class="d-flex flex-column">
+<MudList Class="d-flex flex-column" Clickable="true" @bind-SelectedValue="SelectedPlaylistValue">
     <MudListSubheader Class="d-flex align-center py-2" Style="border-top: 1px solid;">
         <MudIcon Icon="@Icons.Filled.PlaylistPlay"></MudIcon> Playlists
     </MudListSubheader>
@@ -10,9 +10,9 @@
     }
     @foreach (var playlist in Playlists)
     {
-        <MudListItem title="@playlist.PlaylistTitle">
+        <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Value="playlist">
             <div class="playlist-list-item">
-                <img src="data:image/png;@playlist.Image" class="mr-2" /> @playlist.PlaylistTitle
+                <img src="data:image/png;@playlist.CoverImage" class="mr-2" /> @playlist.Title
             </div>
         </MudListItem>
     }
