--- a/BeatSaberTools/Shared/PlaylistList.razor
+++ b/BeatSaberTools/Shared/PlaylistList.razor
@@ -13,16 +13,27 @@
     }
     @foreach (var playlist in Playlists)
     {
-        <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Value="playlist">
+        <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Value="playlist" Class="py-0 px-1">
             <div class="playlist-list-item">
                 @if (!string.IsNullOrEmpty(playlist.CoverImage))
                 {
-                    <img src="data:image/png;@playlist.CoverImage" class="mr-2" /> 
+                    <img src="data:image/png;@playlist.CoverImage" class="ml-3 mr-3" />
                 }
-                @playlist.Title
+                <span>@playlist.Title</span>
+                <MudMenu Icon="@Icons.Material.Filled.MoreVert" Class="ml-auto">
+                    <MudMenuItem OnClick="() => OpenDeletePlaylistDialog(playlist)">Delete</MudMenuItem>
+                </MudMenu>
             </div>
         </MudListItem>
     }
 </MudList>
 
-
+<MudDialog @bind-IsVisible="ShowConfirmDelete">
+    <DialogContent>
+        <MudText>Are you sure you want to delete the "@PlaylistToDelete.Title" playlist?</MudText>
+    </DialogContent>
+    <DialogActions>
+        <MudButton OnClick="RemovePlaylistToDelete">Cancel</MudButton>
+        <MudButton Color="@Color.Error" Variant="Variant.Filled" OnClick="DeletePlaylist">Delete</MudButton>
+    </DialogActions>
+</MudDialog>
