Maps can be added to playlists + added toasts

--- a/BeatSaberTools/Pages/MapBrowser.razor
+++ b/BeatSaberTools/Pages/MapBrowser.razor
@@ -34,6 +34,7 @@
         <MudTh>
             <MudTableSortLabel SortBy="new Func<Map, object>(x => x.SongDuration)">Duration</MudTableSortLabel>
         </MudTh>
+        <MudTh></MudTh>
     </HeaderContent>
     <RowTemplate>
         <MapBrowserRow Map="context"></MapBrowserRow>
