--- a/BeatSaberTools/Pages/MapBrowser.razor
+++ b/BeatSaberTools/Pages/MapBrowser.razor
@@ -8,6 +8,10 @@
           FixedHeader="true"
           RowStyle="height: 88px">
     <ToolBarContent>
+        @if (SelectedPlaylist != null)
+        {
+            <MudChip Variant="Variant.Outlined">@SelectedPlaylist.Title</MudChip>
+        }
         <MudTextField @bind-Value="SearchString"
                       DebounceInterval="300"
                       Immediate="true"
