--- a/BeatSaberTools/Shared/PlaylistList.razor
+++ b/BeatSaberTools/Shared/PlaylistList.razor
@@ -29,6 +29,35 @@
     }
 </MudList>
 
+<MudList Class="d-flex flex-column" Clickable="true" @bind-SelectedValue="SelectedPlaylistValue">
+    <MudListSubheader Class="d-flex align-center justify-space-between py-2" Style="border-top: 1px solid;">
+        <div class="d-flex align-center">
+            <MudIcon Icon="@Icons.Filled.PlaylistPlay"></MudIcon> Dynamic Playlists
+        </div>
+        <MudIconButton Icon="@Icons.Filled.Add" Variant="Variant.Outlined" Size="Size.Small" OnClick="OpenAddDynamicPlaylistDialog" />
+    </MudListSubheader>
+    @if (LoadingPlaylists)
+    {
+        <MudProgressCircular Color="Color.Info" Size="Size.Small" Indeterminate="true" Class="align-self-center" />
+    }
+    @foreach (var playlist in DynamicPlaylists)
+    {
+        <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Value="playlist" Class="py-0 px-1">
+            <div class="playlist-list-item">
+                @if (!string.IsNullOrEmpty(playlist.CoverImage))
+                {
+                    <img src="data:image/png;@playlist.CoverImage" class="ml-3 mr-3" />
+                }
+                <span>@playlist.Title</span>
+                <MudMenu Icon="@Icons.Material.Filled.MoreVert" Class="ml-auto">
+                    <MudMenuItem OnClick="() => OpenEditPlaylistDialog(playlist)">Edit</MudMenuItem>
+                    <MudMenuItem OnClick="() => OpenDeletePlaylistDialog(playlist)">Delete</MudMenuItem>
+                </MudMenu>
+            </div>
+        </MudListItem>
+    }
+</MudList>
+
 <MudDialog @bind-IsVisible="ShowConfirmDelete">
     <DialogContent>
         <MudText>Are you sure you want to delete the "@PlaylistToDelete.Title" playlist?</MudText>
