Linking maps to ranked scoresaber maps

--- a/BeatSaberTools/Pages/MapBrowserRow.razor
+++ b/BeatSaberTools/Pages/MapBrowserRow.razor
@@ -1,4 +1,5 @@
-﻿<MudTd Class="pa-0" Style="width: 50px; position: relative;">
+﻿@using System.Text.Json
+<MudTd Class="pa-0" Style="width: 50px; position: relative;">
     @if (CurrentlyPlaying)
     {
         <div class="playback-progress">
