--- a/BeatSaberTools/Pages/MapBrowserRow.razor
+++ b/BeatSaberTools/Pages/MapBrowserRow.razor
@@ -19,7 +19,9 @@
     }
 </MudTd>
 <MudTd DataLabel="Name">@Map.Name</MudTd>
-<MudTd DataLabel="SongAuthorName">@Map.SongAuthorName</MudTd>
+<MudTd DataLabel="SongAuthorName">
+    <MudLink @onclick="SelectSongAuthor" Color="Color.Default" Typo="Typo.body2">@Map.SongAuthorName</MudLink>
+</MudTd>
 <MudTd DataLabel="MapAuthorName">@Map.MapAuthorName</MudTd>
 <MudTd DataLabel="Duration" Style="width: 130px">@Map.SongDuration.ToString("mm':'ss")</MudTd>
 <MudTd>
@@ -29,7 +31,8 @@
     }
 </MudTd>
 <MudTd Style="width: 130px">
-    @if (Map.PlayerScore?.Score?.Pp != null) {
+    @if (Map.PlayerScore?.Score?.Pp != null)
+    {
         <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">@Map.PlayerScore.Score.Pp.ToString("##.##") pp</MudChip>
     }
 </MudTd>
