--- a/BeatSaberTools/Pages/MapBrowserRow.razor
+++ b/BeatSaberTools/Pages/MapBrowserRow.razor
@@ -27,19 +27,21 @@
 <MudTd>
     @if (Map.PlayerScore != null)
     {
-        <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">@Map.PlayerScore.AccuracyWithMods().ToString("##.##")%</MudChip>
+        <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">@Map.PlayerScore.AccuracyWithMods().ToString("#0.##")%</MudChip>
     }
 </MudTd>
 <MudTd Style="width: 130px">
     @if (Map.PlayerScore?.Score?.Pp != null)
     {
-        <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">@Map.PlayerScore.Score.Pp.ToString("##.##") pp</MudChip>
+        <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">@Map.PlayerScore.Score.Pp.ToString("#0.##") pp</MudChip>
     }
 </MudTd>
 <MudTd Style="width: 130px">
     @if (Map.ScoreEstimate != null)
     {
-        <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">+@Map.ScoreEstimate.PPIncrease.ToString("##.##") pp</MudChip>
+        <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">+@Map.ScoreEstimate.PPIncrease.ToString("#0.##") pp</MudChip>
+        <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">@Map.ScoreEstimate.Accuracy.ToString("#0.##") %</MudChip>
+        <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">@Map.ScoreEstimate.Difficulty</MudChip>
     }
 </MudTd>
 <MudTd>
