Added helper method for subscribing to obseravable and binding to property

--- a/BeatSaberTools/Pages/MapBrowserRow.razor
+++ b/BeatSaberTools/Pages/MapBrowserRow.razor
@@ -1,4 +1,6 @@
-﻿@using System.Text.Json
+﻿@inherits ReactiveComponent
+
+@using System.Text.Json
 @using BeatSaberTools.Core.Utilities.Scoresaber
 
 <MudTd Class="pa-0" Style="width: 50px; position: relative;">
