Better score estimate calculation

--- a/BeatSaberTools/Pages/MapBrowserRow.razor
+++ b/BeatSaberTools/Pages/MapBrowserRow.razor
@@ -41,9 +41,15 @@
 <MudTd Style="width: 130px">
     @if (Map.ScoreEstimate != null)
     {
-        <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">+@Map.ScoreEstimate.PPIncrease.ToString("#0.##") pp</MudChip>
-        <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">@Map.ScoreEstimate.Accuracy.ToString("#0.##") %</MudChip>
-        <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">@Map.ScoreEstimate.Difficulty</MudChip>
+        @foreach (var scoreEstimate in Map.ScoreEstimate)
+        {
+            <MudPaper Elevation="5" Class="pa-2 ma-2">
+                <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">+@scoreEstimate.PPIncrease.ToString("#0.##") pp</MudChip>
+                <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">@scoreEstimate.Accuracy.ToString("#0.##") %</MudChip>
+                <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">@scoreEstimate.Difficulty</MudChip>
+                <MudChip Color="Color.Info" Size="Size.Small" Variant="Variant.Outlined">@scoreEstimate.Stars <MudIcon Icon="@Icons.Filled.Star" Size="Size.Small"></MudIcon></MudChip>
+            </MudPaper>
+        }
     }
 </MudTd>
 <MudTd>
